fix(comps): match checked status with style visiblity

--- a/mizui/comps/_checkbox.scss
+++ b/mizui/comps/_checkbox.scss
@@ -25,6 +25,6 @@
 
     input:checked~label .box::after,
     input:checked~label .box::before {
-        display: none;
+        @extend .show;
     }
 }
